--- a/form.css
+++ b/form.css
@@ -1,43 +1,94 @@
-body {
-    background-color: #0f0e17;
-}
-
+/* Reset styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.for {
-    position: absolute;
-    width: 50%;
+/* Body styles */
+body {
+    background-color: #0f0e17;
+}
+
+/* Form container styles */
+#form {
+    width: 400px;
     text-align: center;
+    padding: 30px;
+    border-radius: 30px;
+    outline: solid rgb(0, 0, 0) 3px;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
-    border-radius: 20px;
-    border: solid 1px black;
-    background-color: #fffffe;
 }
 
-.for input {
-    width: 70%;
-    height: 40px;
-    margin-bottom: 20px;
-    color: black;
-    background-color: #f25f4c;
+/* Circle styles inside the form */
+#form div {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin: 10px;
+    border: black 1px solid;
+    transition: all 0.5s;
+}
+
+#form div:hover, .cc {
+    transform: scale(1.3);
+}
+
+/* Input styles */
+#form button{
+    padding: 10px;
     border: none;
     border-radius: 20px;
-    color: #ffffff;
+    color: #fffffe;
     transition: all 0.3s;
+    width: 100px;
 }
-
-.for input:hover {
-    transform: scale(1.1);
+.f:hover{
+    box-shadow: 0 0 20px 5px red !important;
 }
-
-.for h1 {
-    color: black;
-    margin-bottom: 10px;
+@media(max-width:410px){
+    #form{
+        width: 250px;
+    }
+        #form button{
+            margin-top: 10px;
+        }
+}
+/* Hover effects for specific circles */
+#c1:hover {
+    box-shadow: 0 0 20px 6px #001858;
+}
+#c2:hover {
+    box-shadow: 0 0 20px 6px #271c19;
+}
+#c3:hover {
+    box-shadow: 0 0 20px 6px #33272a;
+}
+#c4:hover {
+    box-shadow: 0 0 20px 6px #272343;
+}
+#c5:hover {
+    box-shadow: 0 0 20px 6px #c0c0c0;
+}
+#c6:hover {
+    box-shadow: 0 0 20px 6px #232946;
+}
+#c7:hover {
+    box-shadow: 0 0 20px 6px #c0c0c0;
+}
+#c8:hover {
+    box-shadow: 0 0 20px 6px #001e1d;
+}
+#c9:hover {
+    box-shadow: 0 0 20px 6px #0d0d0d;
+}
+#c10:hover {
+    box-shadow: 0 0 20px 6px #232323;
+}
+#c11:hover {
+    box-shadow: 0 0 20px 6px #c0c0c0;
 }
